--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button class="button2">Добавить</button>
         </div>
 
-        <input class="searchbar" type="text" name="search" placeholder="Search...">
+        <input src="searchbar" type="text" name="search" placeholder="Search...">
     </div>
 </body>
 <script class="../Lahiye-2 new/main.js"></script>
