--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <input src="searchbar" type="text" name="search" placeholder="Search...">
     </div>
 </body>
-<script class="../Lahiye-2 new/main.js"></script>
+<script src="../Lahiye-2 new/main.js"></script>
 </html>
 
 
