--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <button class="button-86" role="button">CLEAR ALL</button>
             <h1 class="h">To-do list</h1>
             <div class="arrows">
-                <img class="img1" src="./img/up.jpg">
-                <img class="img2" src="./img/down.jpg">
+                <img class="img1" src="../Lahiye-2 new/./img/up.jpg"">
+                <img class="img2" src="../Lahiye-2 new/./img/down.jpg"">
             </div>
         </div>
         <input type="text" id="input" draggable="true">
